--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="HTML5 website template">
+  <meta name="description" content="Chronicle Hackathon 2021">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Pulkit Aggarwal">
   <link rel="stylesheet" href="assets/css/main.css">
