--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Chronicle Hackathon 2021">
+  <meta name="description" content="Chronicle Hackathon 2021
+  ">
   <meta name="keywords" content="global, template, html, sass, jquery">
   <meta name="author" content="Pulkit Aggarwal">
   <link rel="stylesheet" href="assets/css/main.css">
@@ -64,7 +65,7 @@
                 <h3>Chronicle is an annual hackathon hosted by the Google Developers Student Club - University of Melbourne. This year, it’ll be held virtually and open to all university students across Australia and New Zealand. The theme for this year is Consumer Tech: Make It a Reality. </h3>
                 <div class="date-chronicle">
                 <br>
-                <h2>19TH - 21ST MARCH</h2>
+                <h2>9TH - 11TH APRIL</h2>
                 <br>
                 <br>
                 
@@ -158,7 +159,7 @@
           <li class="l-section section">
             <div class="hire">
               <h2>Prizes</h2>
-              <h4>To be announced soon.</h4>
+              <h4>To be announced very soon.</h4>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
