--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="viewport" class="l-viewport">
       <div class="l-wrapper">
         <header class="header">
-          <a class="header--logo" href = "https://zinader.github.io/chroniclehack/">
+          <a class="header--logo" href = "http://chronicle2021.com/">
 
             <img src="assets/img/logo.png" alt="Chronicle">
             <p>Chronicle</p>
